[package]
name = "vigilator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vigilator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
bincode = "2.0.1"
sqlx = { version = "0.8.5" , features = ["sqlite", "runtime-tokio-native-tls"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
once_cell = "1.21.3"
uuid = { version = "1.16.0", features = ["v4"] }
time = "0.3.41"
